<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="login_name">Login</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="password_text">Password</string>
    <string name="Password">Password</string>
    <string name="LoginHint">Login Name</string>
    <string name="Question">What does this do?</string>
    <string name="RadioButtonText">RadioButton</string>
    <string name="CheckBoxText">CheckBox</string>
    <string name="dialog_title">Dialog Box</string>
    <string name="dialog_message">Do you want to quit?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="camera_error">Error</string>
    <string name="btnChat">Start Chat</string>
    <string name="btnSend">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="goBack">Go Back?</string>
    <string name="setText">Set Text</string>
    <string name="beginToolbar">Starting toolbar</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="weather_txt_btn">Weather Button</string>
    <string-array name="defineCity">
        <item>Waterloo</item>
        <item>Ottawa</item>
        <item>Cambridge</item>
        <item>Guelph</item>
    </string-array>
</resources>